--- a/www/index.html
+++ b/www/index.html
@@ -1,45 +1,61 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html>
-  <head>
+<head>
 	<!-- Change this if you want to allow scaling -->
     <meta name="viewport" content="width=default-width; user-scalable=no" />
-
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-
     <title>sdktogo</title>
-	
+
+    <link rel="stylesheet" href="lib/jquery.mobile-1.0a4.1/jquery.mobile-1.0a4.1.css"/>
+    <link rel="stylesheet" href="style.css"/>
 	<!-- iPad/iPhone specific css below, add after your main css >
-	<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="ipad.css" type="text/css" />		
-	<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css" type="text/css" />		
+	<link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="ipad.css" type="text/css" />
+	<link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css" type="text/css" />
 	-->
 	<!-- If you application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www directory and include it here -->
-	<script type="text/javascript" charset="utf-8" src="phonegap.0.9.4.min.js"></script>
-    <script type="text/javascript" charset="utf-8">
 
+    <script type="text/javascript" src="lib/phonegap.0.9.4.min.js"></script>
+    <script type="text/javascript" src="lib/jquery-1.5.1.js"></script>
+    <script type="text/javascript" src="lib/jquery.mobile-1.0a4.1/jquery.mobile-1.0a4.1.js"></script>
 
-	// If you want to prevent dragging, uncomment this section
-	/*
-	function preventBehavior(e) 
-	{ 
-      e.preventDefault(); 
-    };
-	document.addEventListener("touchmove", preventBehavior, false);
-	*/
-	
-	function onBodyLoad()
-	{
-		document.addEventListener("deviceready",onDeviceReady,false);
-	}
-	
-	/* When this function is called, PhoneGap has been initialized and is ready to roll */
-	function onDeviceReady()
-	{
-		// do your thing!
-	}
-    
-    </script>
-  </head>
-  <body onload="onBodyLoad()">
-  	
-  </body>
+    <!--<script type="text/javascript" src="lib/jquery-ui-1.8.11.custom.min.js"></script>-->
+    <script type="text/javascript" src="lib/jquery.mobiledragdrop.js"></script>
+
+    <link rel="stylesheet" href="app.css"/>
+    <script type="text/javascript" src="app.js"></script>
+
+</head>
+<body onload="onBodyLoad()">
+
+<div data-role="page">
+    <div data-role="header">
+        <h1>SDK to go</h1>
+
+        <div data-role="navbar">
+            <ul>
+                <li> <a href="a.html" class="ui-btn-active"> A </a> </li>
+                <li> <a href="b.html"> B </a> </li>
+            </ul>
+        </div>
+    </div>
+
+    <div data-role="content">
+        <div id="canvas">
+            <div id="block1" class="block">
+               drag me
+             </div>
+        </div>
+    </div>
+
+    <div data-role="footer">
+        <div data-role="footer" class="ui-bar">
+            <a href="index.html" data-role="button" data-icon="delete">Remove</a>
+        	<a href="index.html" data-role="button" data-icon="plus">Add</a>
+            <a href="index.html" data-role="button" data-icon="arrow-u">Up</a>
+            <a href="index.html" data-role="button" data-icon="arrow-d">Down</a>
+        </div>
+    </div>
+
+</div>
+</body>
 </html>
