--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <!--<script type="text/javascript" src="lib/jquery-ui-1.8.11.custom.min.js"></script>-->
     <script type="text/javascript" src="lib/jquery.mobiledragdrop.js"></script>
 
-    <link rel="stylesheet" href="app.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <script type="text/javascript" src="app.js"></script>
 
 </head>
@@ -41,20 +41,22 @@
     </div>
 
     <div data-role="content">
-        <div id="canvas">
-            <div id="proto-button" data-role="button" class="proto">Button</div>
+        <div id="view-canvas">
+            <div id="proto-button" data-role="button" class="proto button">
+                Button
+            </div>
 
-            <div id="proto-textinput" class="proto">
+            <div id="proto-textinput" class="proto textinput">
                 <label for="name">Text input:</label>
                 <input type="text" name="name" value=""/>
             </div>
 
-            <div id="proto-password" class="proto">
+            <div id="proto-password" class="proto password">
                 <label for="password">Password input:</label>
                 <input type="password" name="password" value=""/>
             </div>
 
-            <div id="proto-textarea" class="proto">
+            <div id="proto-textarea" class="proto textarea">
                 <label for="textarea">Textarea:</label>
                 <textarea name="textarea"></textarea>
             </div>
@@ -62,11 +64,9 @@
         </div>
     </div>
 
-    <div data-role="footer" data-position="fixed">
-        <div data-role="footer" class="ui-bar">
-            <a href="#add-widget" data-role="button" data-icon="plus" data-rel="dialog">Add widget</a>
-            <div onclick="removeWidget()" data-role="button" data-icon="minus">Remove widget</div>
-        </div>
+    <div data-role="footer" class="ui-bar" data-position="fixed">
+        <a href="#add-widget" data-role="button" data-icon="plus" data-rel="dialog">Add widget</a>
+        <div onclick="removeWidget()" data-role="button" data-icon="minus">Remove widget</div>
     </div>
 </div>
 
@@ -102,16 +102,28 @@
     </div>
 
     <div data-role="content">
-        <div id="canvas">
+        <div id="control-canvas">
+            <div>
+                <label for="window">window</label>
+                <input type="radio" name="object-choice" id="window" value="window" checked="checked" />
 
+                <select name="event-choice">
+                    <option value="load">load</option>
+                    <option value="click">click</option>
+                    <option value="focus">focus</option>
+                </select>
+
+                <div data-role="button">Bla</div>
+            </div>
+
+		    <label for="radio-choice-4">Lizard</label>
+		    <input type="radio" name="object-choice" id="radio-choice-4" value="choice-4"  />
         </div>
     </div>
 
-    <div data-role="footer" data-position="fixed">
-        <div data-role="footer" class="ui-bar">
-            <a href="#add-block" data-role="button" data-icon="plus" data-rel="dialog">Add block</a>
-
-        </div>
+    <div data-role="footer" class="ui-bar" data-position="fixed">
+        <a href="#add-block" data-role="button" data-icon="plus" data-rel="dialog">Add block</a>
+        <div onclick="removeBlock()" data-role="button" data-icon="plus" data-rel="dialog">Remove</div>
     </div>
 </div>
 
@@ -122,6 +134,23 @@
     </div>
 
     <div data-role="content">
+        <!--
+        <div class="ui-body ui-body-b">
+		<fieldset class="ui-grid-a">
+				<div class="ui-block-a">
+                    <select class="ui-block-a" onclick="updateObjects()" name="object-select" id="object-select">
+                    	<option value="window">window</option>
+                    </select>
+                </div>
+
+				<div class="ui-block-b">
+                    <select class="ui-block-b" onclick="updateEvents()" name="event-select" id="event-select">
+                    	<option value="load">load</option>
+                    </select>
+                </div>
+	    </fieldset>
+		</div>-->
+
         <div onclick="addBlock('alert')" data-role="button" data-rel="back">Alert</div>
         <div onclick="addBlock('alert')" data-role="button" data-rel="back">Alert</div>
         <div onclick="addBlock('alert')" data-role="button" data-rel="back">Alert</div>
