Fix bug with selecting object created from proto-objects.

--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@
 
     <div data-role="content">
         <div id="control-canvas">
-            <div id="proto-object" class="proto">
+            <div id="proto-object" class="proto object">
                 <label for="object">object</label>
                 <input type="radio" name="object-choice" id="object" value="object"/>
 
@@ -116,7 +116,7 @@
                 <div id="proto-block" data-role="button">Block</div>
             </div>
 
-            <div id="window-block">
+            <div id="window-block" class="object">
                 <label for="window">window</label>
                 <input type="radio" name="object-choice" id="window" value="window" checked="checked" />
 
