--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- Change this if you want to allow scaling -->
-    <meta name="viewport" content="width=default-width; user-scalable=no" />
+    <meta name="viewport" content="width=default-width; user-scalable=no">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <title>sdktogo</title>
 
